--- a/Practice/Views/Home/NoteDetail.cshtml
+++ b/Practice/Views/Home/NoteDetail.cshtml
@@ -10,8 +10,8 @@
 
 <form asp-action="NoteList" method="post">
     <label>@label1</label>
-    <input name="inputSubject" value="@Model.subject"><br>
+    <input name="inputSubject" value="@Model.Subject"><br>
     <label>@label2</label>
-    <input name="inputContent" value="@Model.content"><br>
+    <input name="inputContent" value="@Model.Content"><br>
     <input type="submit" value="Back to Note List">
 </form>
