--- a/Practice/Views/Home/NoteEditor.cshtml
+++ b/Practice/Views/Home/NoteEditor.cshtml
@@ -8,7 +8,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<form asp-action="NoteList" method="post">
+<form asp-action="EditNote" method="post">
     <label>@label1</label>
     <input name="inputSubject" value="@Model.subject"><br>
     <label>@label2</label>
