--- a/Practice/Views/Home/NoteEditor.cshtml
+++ b/Practice/Views/Home/NoteEditor.cshtml
@@ -9,9 +9,15 @@
 <h1>@ViewData["Title"]</h1>
 
 <form asp-action="EditNote" method="post">
-    <label>@label1</label>
-    <input name="inputSubject" value="@Model.Subject"><br>
-    <label>@label2</label>
-    <input name="inputContent" value="@Model.Content"><br>
+    <div>
+        <label asp-for="Subject">@label1</label>
+        <input asp-for="Subject" />
+    </div>
+
+    <div>
+        <label asp-for="Content">@label2</label>
+        <textarea asp-for="Content" id="TextArea"></textarea>
+    </div>
+
     <input type="submit" value="Save Note">
 </form>
