--- a/Practice/Views/Home/NoteList.cshtml
+++ b/Practice/Views/Home/NoteList.cshtml
@@ -13,7 +13,7 @@
     }
 }
 
-<form asp-action="NoteEditor" method="post">
-    <input type="submit" value="New Note">
-</form>
+<div>
+    <a asp-action="NoteEditor">New Note</a>
+</div>
 
